<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sliding_menu_content_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5.0dip"
        android:orientation="vertical">
        
        <Button
	        android:id="@+id/menu_suggest_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/suggestiong"
	        android:background="#303030"
	        android:textColor="#FFFFFF"/>
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="#1f1f1f"/>
	    
	    <Button 
	        android:id="@+id/menu_checkupdate_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/check_update"
	        android:layout_marginTop="5.0dip"
	        android:background="#303030"
	        android:textColor="#FFFFFF"/>
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="#1f1f1f"/>
	    
	    <Button
	        android:id="@+id/menu_about_btn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about"
	        android:layout_marginTop="5.0dip"
	        android:background="#303030"
	        android:textColor="#FFFFFF"/>
	    
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="#1f1f1f"/>
        
    </LinearLayout>
    
    
    
    <TextView
        android:id="@+id/menu_version_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/suggesttion_bottom_height"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#383938"/>

</RelativeLayout>
